[gd_scene load_steps=3 format=3 uid="uid://chh1lfcu18tbg"]

[ext_resource type="Script" path="res://UI/Loading.gd" id="1_7rujn"]
[ext_resource type="FontFile" uid="uid://cqldsy3mtjxj5" path="res://Font/defaut.tres" id="2_2535g"]

[node name="ColorRect" type="ColorRect"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.133333, 0.180392, 0.266667, 1)
script = ExtResource("1_7rujn")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_2535g")
theme_override_font_sizes/font_size = 40
text = "少女加载中……"

[node name="l_timer" type="Timer" parent="Label"]
wait_time = 0.541
autostart = true

[node name="Timer" type="Timer" parent="."]
wait_time = 2.12
one_shot = true
autostart = true

[connection signal="timeout" from="Label/l_timer" to="." method="_on_l_timer_timeout"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
